Fix TOC container positioning by aligning it to the right on large screens

--- a/themes/hugo-dead-simple/assets/css/toc.css
+++ b/themes/hugo-dead-simple/assets/css/toc.css
@@ -10,7 +10,7 @@
 @media screen and (min-width: 1150px) {
   #tableOfContentContainer {
     position: fixed;
-    left: 20px;
+    right: 20px;
     top: 46px;
     max-width: 15vw;
     width: 15vw;
